--- a/index.html
+++ b/index.html
@@ -11,6 +11,55 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home">
+        <div class="title-group">
+            <h1>Custom Title Here</h1>
+            <h2>Welcome to your website!</h2>
+        </div>
+    </section>
+    <!-- About Section -->
+    <section id="about">
+
+
+        <h1>Undraw Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="img/undraw_proud_coder_light.svg" alt="Production Coder" id="image1">
+            </div>
+
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">
+            </div>
+
+            <div class="image-container">
+                <h2>High Concept</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
+            </div>
+
+
+        </div>
+    </section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h1>Buttons</h1>
+
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+
+    </section>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
