--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Light Dark Mode</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Dark Mode Switch -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span id="toggle-text">Light Mode</span>
+            <i class="fa-solid fa-sun"></i>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
+    </div>
+
+
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
@@ -29,8 +42,6 @@
     </section>
     <!-- About Section -->
     <section id="about">
-
-
         <h1>Undraw Illustrations</h1>
         <div class="about-container">
             <div class="image-container">
@@ -47,18 +58,33 @@
                 <h2>High Concept</h2>
                 <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
             </div>
-
-
         </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
-
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione cum quisquam, corrupti illum totam
+                blanditiis dicta dolore iste! Corrupti, nisi perferendis nesciunt accusantium saepe autem quos veritatis
+                nostrum cupiditate! Nesciunt!.</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
-
+        <div class="social-icons">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-codepen"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
     </section>
     <!-- Script -->
     <script src="script.js"></script>
