--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-            <h1>Custom Title Here</h1>
-            <h2>Welcome to your website!</h2>
+            <h1>Welcome back!</h1>
+            <h2>It's great to see you!</h2>
         </div>
     </section>
     <!-- About Section -->
